Simplify svg turbulence and displacement map for Safari support

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1,6 +1,8 @@
 .personality-casual {
     .squiggle {
         filter: url("#squiggle");
+        position: relative;
+        transform: translateZ(0);
     }
 }
 
