--- a/resources/views/_extras.antlers.html
+++ b/resources/views/_extras.antlers.html
@@ -2,8 +2,8 @@
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="0" width="0">
     <defs>
         <filter id="squiggle">
-            <feTurbulence type="fractalNoise" id="turbulence" baseFrequency=".05" numOctaves="4" result="turbulence" seed="5"/>
-            <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="4" />
+            <feTurbulence type="fractalNoise" id="turbulence" baseFrequency=".05" numOctaves="4"/>
+            <feDisplacementMap id="displacement" in="SourceGraphic" scale="4" />
         </filter>
     </defs>
 </svg>
