--- a/resources/views/blog/card.antlers.html
+++ b/resources/views/blog/card.antlers.html
@@ -1,9 +1,6 @@
 <a href="{{ url }}" class="transition-all duration-75 ease-in-out h-full block relative top-0 hover:-top-2 shadow-lg hover:shadow-xl bg-white rounded-xl overflow-hidden">
-    {{ if oversized}}
-        <img class="squiggle" height="285" src="{{ glide:hero_image height="570" width="1472" fit="crop_focal" }}" alt="{{ hero_image:alt }}">
-    {{ else }}
-        <img class="squiggle" height="285" src="{{ glide:hero_image height="570" width="736" fit="crop_focal" }}" alt="{{ hero_image:alt }}">
-    {{ /if }}
+    <img class="{{ oversized ? 'hidden md:block' : 'hidden' }} squiggle" height="285" src="{{ glide:hero_image height="570" width="1472" fit="crop_focal" }}" alt="{{ hero_image:alt }}">
+    <img class="squiggle {{ oversized ?= 'md:hidden' }}" height="285" src="{{ glide:hero_image height="570" width="736" fit="crop_focal" }}" alt="{{ hero_image:alt }}">
     <div class="py-6 px-8">
         <h2 class="font-bold text-2xl leading-tight">
             {{ title  }}
