--- a/resources/views/_sign-up.antlers.html
+++ b/resources/views/_sign-up.antlers.html
@@ -4,10 +4,10 @@
     <p class="text-lg mt-8">Join our newsletter and get resources, curated content, and design inspiration delivered straight to your inbox.</p>
 
     {{# This is a static form you can wire up to anything. #}}
-    <form action="" class="mt-8 flex items-center md:w-2/3 mx-auto">
+    <form action="" class="mt-8 flex flex-wrap items-center md:w-2/3 mx-auto">
         <label for="email" class="sr-only"></label>
-        <input id="email" class="flex-1 bg-gray-200 py-3 px-6 rounded" type="email" placeholder="Your email" required>
-        <button class="ml-3 bg-black text-white py-3 px-6 rounded hover:squiggle" type="submit">Subscribe</button>
+        <input id="email" class="w-full flex-1 bg-gray-200 py-3 px-6 rounded" type="email" placeholder="Your email" required>
+        <button class="bg-black md:ml-3 mt-3 md:mt-0 w-full md:w-auto text-white py-3 px-6 rounded hover:squiggle" type="submit">Subscribe</button>
     </form>
 
     <div class="w-full border-b-2 pt-12 border-black squiggle"></div>
