Fix unquoted js value. Closes #2.

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -9,7 +9,7 @@
         <script type="application/ld+json">
             {
               "@context": "https://schema.org/",
-              "@type": blogPost,
+              "@type": "blogPost",
               "name": "{{ title }}",
               "author": {
                 "@type": "Person",
