--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -15,7 +15,7 @@
                 "@type": "Person",
                 "name": "{{ author:name }}"
               },
-              "datePublished": "{{ date format="Y-m-d" }}",
+              "datePublished": "{{ date format='Y-m-d' }}",
               "description": "{{ intro | strip_tags | entities }}",
             }
         </script>
