--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -15,8 +15,8 @@
                 "@type": "Person",
                 "name": "{{ author:name }}"
               },
-              "datePublished": "{{ date format='Y-m-d' }}",
-              "description": "{{ intro | strip_tags | entities }}",
+              "datePublished": "{{ date format="Y-m-d" }}",
+              "description": "{{ intro | strip_tags | entities }}"
             }
         </script>
         <link rel="stylesheet" href="{{ mix src='css/tailwind.css' }}">
