--- a/resources/css/content.css
+++ b/resources/css/content.css
@@ -68,7 +68,7 @@
     ul li > code,
     ol li *:not(pre) code,
     ol li > code {
-        @apply inline-block text-white text-sm p-1 leading-none whitespace-no-wrap font-mono align-baseline;
+        @apply inline-block text-white text-sm p-1 leading-none whitespace-nowrap font-mono align-baseline;
     }
 
     pre, pre&, > ul li pre, > ol li pre {
