--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -1,22 +1,22 @@
 <!doctype html>
-<html lang="{{ site:short_locale }}">
+<html lang="{{ $site:short_locale }}">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ title }} — {{ settings:site_name }}</title>
-        <meta name="description" content="{{ intro | strip_tags | entities }}">
+        <title>{{ $title }} — {{ $settings:site_name }}</title>
+        <meta name="description" content="{{ $intro | strip_tags | entities }}">
         <script type="application/ld+json">
             {
               "@context": "https://schema.org/",
               "@type": "blogPost",
-              "name": "{{ title }}",
+              "name": "{{ $title }}",
               "author": {
                 "@type": "Person",
-                "name": "{{ author:name }}"
+                "name": "{{ $author:name }}"
               },
-              "datePublished": "{{ date format="Y-m-d" }}",
-              "description": "{{ intro | strip_tags | entities }}"
+              "datePublished": "{{ $date | format("Y-m-d") }}",
+              "description": "{{ $intro | strip_tags | entities }}"
             }
         </script>
         <link rel="stylesheet" href="{{ mix src='css/tailwind.css' }}">
@@ -24,10 +24,10 @@
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
         <script src="{{ mix src='/js/site.js' }}"></script>
     </head>
-    <body class="bg-white text-black font-body leading-normal personality-{{ settings:personality }}">
+    <body class="bg-white text-black font-body leading-normal personality-{{ $settings:personality }}">
         {{ partial:nav }}
         <main class="py-12 lg:py-20">
-            {{ template_content }}
+            {{ $template_content }}
         </main>
         {{ partial:footer }}
         {{ partial:extras }}
